# protofiles

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  pyproject.toml
.gitlab/: renovate.json
src/: CMakeLists.txt
src/phonexia/grpc/common/: core.proto  health_check.proto  licensing.proto  status.proto
src/phonexia/grpc/common/beta/: licensing.proto
src/phonexia/grpc/technologies/age_estimation/v1/: age_estimation.proto
src/phonexia/grpc/technologies/audio_manipulation_detection/experimental/: audio_manipulation_detection.proto
src/phonexia/grpc/technologies/audio_quality_estimation/v1/: audio_quality_estimation.proto
src/phonexia/grpc/technologies/deepfake_detection/experimental/: deepfake_detection.proto
src/phonexia/grpc/technologies/deepfake_detection/v1/: deepfake_detection.proto
src/phonexia/grpc/technologies/denoiser/v1/: denoiser.proto
src/phonexia/grpc/technologies/emotion_recognition/v1/: emotion_recognition.proto
src/phonexia/grpc/technologies/enhanced_speech_to_text_built_on_whisper/v1/: enhanced_speech_to_text_built_on_whisper.proto
src/phonexia/grpc/technologies/gender_identification/v1/: gender_identification.proto
src/phonexia/grpc/technologies/grapheme_to_phoneme_conversion/v1/: grapheme_to_phoneme_conversion.proto
src/phonexia/grpc/technologies/internal/text_translation/v1/: text_translation.proto
src/phonexia/grpc/technologies/keyword_spotting/v1/: keyword_spotting.proto
src/phonexia/grpc/technologies/language_identification/v1/: language_identification.proto
src/phonexia/grpc/technologies/media_processing/v1/: media_processing.proto
src/phonexia/grpc/technologies/phoneme_recognition/v1/: phoneme_recognition.proto
src/phonexia/grpc/technologies/referential_deepfake_detection/v1/: referential_deepfake_detection.proto
src/phonexia/grpc/technologies/replay_attack_detection/experimental/: replay_attack_detection.proto
src/phonexia/grpc/technologies/speaker_diarization/v1/: speaker_diarization.proto
src/phonexia/grpc/technologies/speaker_identification/: speaker_identification.proto
src/phonexia/grpc/technologies/speaker_identification/v1/: speaker_identification.proto
src/phonexia/grpc/technologies/speech_to_text/v1/: speech_to_text.proto
src/phonexia/grpc/technologies/speech_to_text_whisper_enhanced/v1/: speech_to_text_whisper_enhanced.proto
src/phonexia/grpc/technologies/time_analysis/v1/: time_analysis.proto
src/phonexia/grpc/technologies/transcription_normalization/v1/: transcription_normalization.proto
src/phonexia/grpc/technologies/voice_activity_detection/v1/: voice_activity_detection.proto
